@@ -73,7 +73,7 @@ static int vgremove_single(struct cmd_context *cmd, const char *vg_name,
 		}
 	}
 
-	backup_remove(vg_name);
+	backup_remove(cmd, vg_name);
 
 	if (ret == ECMD_PROCESSED)
 		log_print("Volume group \"%s\" successfully removed", vg_name);
